# MatrixEngine

./: CMakeLists.txt  CMakeSettings.json  cmake_install.cmake
Content/: freddy.gltf
EngineFiles/: Engine.cpp  Engine.hpp
EngineFiles/Core/AssetLoader/: AssetLoader.cpp
EngineFiles/Core/Assets/: AssetStructs.hpp
EngineFiles/Core/Assets/AssetLoader/: AssetLoader.cpp  AssetLoader.hpp
EngineFiles/Core/Assets/DefaultAssets/: DefaultAssets.cpp  DefaultAssets.hpp
EngineFiles/Core/Editor/: Editor.cpp  Editor.hpp
EngineFiles/Core/Editor/Render/EditorRenderer/: EditorRenderer.cpp  EditorRenderer.hpp
EngineFiles/Core/Editor/Render/ViewportRenderer/: ViewportRenderer.cpp  ViewportRenderer.hpp
EngineFiles/Core/Editor/Render/WorldRenderer/: WorldRenderer.cpp  WorldRenderer.hpp
EngineFiles/Core/Editor/Viewport/: Viewport.cpp  Viewport.hpp
EngineFiles/Core/Editor/Viewport/ViewportController/: ViewportController.cpp  ViewportController.hpp
EngineFiles/Core/Enums/: PipelineEnums.hpp
EngineFiles/Core/Game/: Game.cpp  Game.hpp
EngineFiles/Core/GameObject/: GameObject.cpp  GameObject.hpp
EngineFiles/Core/GameObject/Component/: Component.cpp  Component.hpp
EngineFiles/Core/GameObject/Component/CameraComponent/: CameraComponent.hpp
EngineFiles/Core/GameObject/Component/CollisionComponent/: CollisionComponent.cpp  CollisionComponent.hpp
EngineFiles/Core/GameObject/Component/MeshComponent/: MeshComponent.cpp  MeshComponent.hpp
EngineFiles/Core/GameObject/Component/MovementComponent/: MovementComponent.hpp
EngineFiles/Core/GameObject/Component/PhysicsComponent/: PhysicsComponent.cpp  PhysicsComponent.hpp
EngineFiles/Core/GameObject/Component/SpriteComponent/: SpriteComponent.cpp  SpriteComponent.hpp
EngineFiles/Core/GameObject/Controller/: Controller.cpp  Controller.hpp
EngineFiles/Core/GameObject/Controller/ViewportController/: ViewportController.cpp  ViewportController.hpp
EngineFiles/Core/GameObject/Entity/: Entity.cpp  Entity.hpp  Transform.hpp
EngineFiles/Core/GameObject/Entity/Agent/: Agent.cpp  Agent.hpp
EngineFiles/Core/GameObject/Entity/Component/: Component.cpp  Component.hpp
EngineFiles/Core/GameObject/Entity/Component/CollisionComponent/: CollisionComponent.hpp
EngineFiles/Core/GameObject/Entity/Component/MeshComponent/: MeshComponent.cpp  MeshComponent.hpp
EngineFiles/Core/GameObject/Entity/Component/MovementComponent/: MovementComponent.hpp  MovementTypes.hpp
EngineFiles/Core/GameObject/Entity/Component/SpriteComponent/: SpriteComponent.cpp  SpriteComponent.hpp
EngineFiles/Core/GameObject/Entity/Static/: Static.cpp  Static.hpp
EngineFiles/Core/GameObject/World/: World.cpp  World.hpp
EngineFiles/Core/GameObject/World/Level/: Level.cpp  Level.hpp
EngineFiles/Core/GameObject/World/WorldRenderer/: WorldRenderer.cpp  WorldRenderer.hpp
EngineFiles/Core/Math/: vec2.h
EngineFiles/Core/PhysicsManager/: CollisionStructs.hpp  PhysicsManager.cpp  PhysicsManager.hpp  PhysicsStructs.hpp
EngineFiles/Core/Render/: RenderStructs.hpp  Renderer.cpp  Renderer.hpp
EngineFiles/Core/Render/EngineRenderer/: EngineRenderer.cpp  EngineRenderer.hpp
EngineFiles/Core/Render/WorldRenderer/: WorldRenderer.cpp  WorldRenderer.hpp
EngineFiles/Core/ShaderManager/: ShaderManager.cpp  ShaderManager.hpp  ShaderStructs.hpp
EngineFiles/Core/Structs/: Appstate.hpp  AssetStructs.hpp  FrameData.hpp  View.hpp
EngineFiles/Core/TickManager/: TickManager.cpp  TickManager.hpp
EngineFiles/Core/Viewport/: Viewport.cpp  Viewport.hpp
EngineFiles/Core/Viewport/SelectProxy/: SelectProxy.cpp  SelectProxy.hpp
EngineFiles/Core/Viewport/ViewportCamera/: ViewportCamera.cpp  ViewportCamera.hpp
EngineFiles/Core/Viewport/ViewportController/: ViewportController.cpp  ViewportController.hpp
EngineFiles/Core/Viewport/ViewportRenderer/: ViewportRenderer.cpp  ViewportRenderer.hpp
EngineFiles/Core/ViewportCamera/: ViewportCamera.cpp  ViewportCamera.hpp
EngineFiles/Core/WindowManager/: WindowManager.cpp  WindowManager.hpp
EngineFiles/Core/WindowManager/Window/: Window.cpp  Window.hpp
EngineFiles/Entity/: Entity.cpp  Entity.hpp
EngineFiles/Entity/Agent/: Agent.cpp  Agent.hpp
EngineFiles/Entity/Component/: Component.cpp  Component.hpp
EngineFiles/Entity/Component/CollisionComponent/: CollisionComponent.cpp
EngineFiles/Entity/Component/ImageComponent/: ImageComponent.cpp  ImageComponent.hpp
EngineFiles/Entity/Component/MeshComponent/: MeshComponent.cpp  MeshComponent.hpp
EngineFiles/Entity/Component/MovementComponent/: MovementComponent.cpp  MovementComponent.hpp
EngineFiles/Entity/Component/PhysicsComponent/: PhysicsComponent.cpp  PhysicsComponent.hpp
EngineFiles/Entity/Component/SpriteComponent/: SpriteComponent.cpp  SpriteComponent.hpp
EngineFiles/Entity/Static/: Static.hpp
EngineFiles/World/: World.cpp  World.hpp
EngineFiles/World/Level/: Level.cpp  Level.hpp
shaders/: SelectProxy.frag.hlsl  SelectProxy.vert.hlsl
